--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <p>Hello Gitpod!</p>
+    <h2>Hello! I'm Petros</h2> 
+    <main>
+      <img src="https://guide.karpaty.ua/uploads/article_photos/1442828763-92696__petros2.jpg" alt="Petros"> 
+    <p>Петрос (2 020 м), Чорногірський хребет одна з найцікавіших карпатських гір для сходження. Тих, хто дійде вершини стрімкими схилами Петросу буде чекати щедра винагорода — звідси вся Чорногора, як на долоні: від Говерли аж до Піп-Івану!</p>
+      <p>Петрос — передостання вершина на Чорногірському хребті. Гора видовищна і придатна для сходжень будь-якої пори року. Зауважте тільки, що підйом на зимовий Петрос — завдання не для новачків: такому походу надана категорія складності 2-А (далеко не найскладніший маршрут, проте без відповідного спорядження, досвіду та кваліфікованого інструктора сюди краще не потикатись).</p>
+  </main>
+
   </body>
 </html>
