--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
     <p>Петрос (2 020 м), Чорногірський хребет одна з найцікавіших карпатських гір для сходження. Тих, хто дійде вершини стрімкими схилами Петросу буде чекати щедра винагорода — звідси вся Чорногора, як на долоні: від Говерли аж до Піп-Івану!</p>
       <p>Петрос — передостання вершина на Чорногірському хребті. Гора видовищна і придатна для сходжень будь-якої пори року. Зауважте тільки, що підйом на зимовий Петрос — завдання не для новачків: такому походу надана категорія складності 2-А (далеко не найскладніший маршрут, проте без відповідного спорядження, досвіду та кваліфікованого інструктора сюди краще не потикатись).</p>
       <p> Дізнайся більше цікавої інформації про <a href="https://guide.karpaty.ua/uk/places/petros" target="_bank"> Петрос</a> </p>
-     </main>
+      <ol>Три причини йти на Петрос:
+        <li>немає такого натовпу туристів, як на Говерлі</li>
+        <li>одна з небагатьох цікавих гір-двотисячників, що можна подолати за два, і навіть за один день</li>
+        <li>Звідси Чорногора — як на долоні. </li> 
+      </ol>
+      <ul>Що видно з вершини?
+        <li>Чорногору</li>
+        <li>Свидовець</li>
+        <li>Мармароси</li>
+        <li>Карпати румунські</li> 
+      </ul>
 
    </main>
 
