--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Hello World</h1>
     <h2>Hello! I'm Petros</h2> 
     <main>
-      <a href="#familiarity-header">Знайомство</a> 
+    <a href="#familiarity-header">Знайомство</a> 
       <a href="#"><img src="https://guide.karpaty.ua/uploads/article_photos/1442828763-92696__petros2.jpg" alt="Petros"></a> 
       <h2 id="familiarity-header">Знайомство</h2> 
     <p>Петрос (2 020 м), Чорногірський хребет одна з найцікавіших карпатських гір для сходження. Тих, хто дійде вершини стрімкими схилами Петросу буде чекати щедра винагорода — звідси вся Чорногора, як на долоні: від Говерли аж до Піп-Івану!</p>
@@ -24,7 +24,11 @@
         <li>Мармароси</li>
         <li>Карпати румунські</li> 
       </ul>
-
+      <form action="https://docs.google.com/spreadsheets/d/1ps1_gFE3-kYnceR4qvL5Pa3l-VQGkkZt1vAMG8gcOjI/edit?usp=sharing"> Поділися своїм досвідом 
+      <input type="text" placeholder="Які гори ти знаєш?" required> 
+      <button type="submit">Надіслати
+      </button>
+      </form>
    </main>
 
   </body>
