Added link form

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>Мармароси</li>
         <li>Карпати румунські</li> 
       </ul>
-      <form action="https://docs.google.com/spreadsheets/d/1ps1_gFE3-kYnceR4qvL5Pa3l-VQGkkZt1vAMG8gcOjI/edit?usp=sharing"> Поділися своїм досвідом 
+      <form action="https://docs.google.com/forms/d/e/1FAIpQLSd-al1WfywUB4EOPnfJxWINSxnMfSFwT2f1mZiMU_99pF4nxg/viewform?usp=pp_url"> Поділися своїм досвідом 
       <input type="text" placeholder="Які гори ти знаєш?" required> 
       <button type="submit">Надіслати
       </button>
