--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>Мармароси</li>
         <li>Карпати румунські</li> 
       </ul>
-      <form action="https://docs.google.com/forms/d/e/1FAIpQLSd-al1WfywUB4EOPnfJxWINSxnMfSFwT2f1mZiMU_99pF4nxg/viewform?usp=pp_url"> Поділися своїм досвідом 
+      <form action="https://forms.gle/vLxasW6xSQzJ2jpA6"> Поділися своїм досвідом 
       <input type="text" placeholder="Які гори ти знаєш?" required> 
       <button type="submit">Надіслати
       </button>
