--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a href="#familiarity-header">Знайомство</a> 
       <a href="#"><img src="https://guide.karpaty.ua/uploads/article_photos/1442828763-92696__petros2.jpg" alt="Petros"></a> 
       <h2 id="familiarity-header">Знайомство</h2> 
+      <div>
     <p>Петрос (2 020 м), Чорногірський хребет одна з найцікавіших карпатських гір для сходження. Тих, хто дійде вершини стрімкими схилами Петросу буде чекати щедра винагорода — звідси вся Чорногора, як на долоні: від Говерли аж до Піп-Івану!</p>
       <p>Петрос — передостання вершина на Чорногірському хребті. Гора видовищна і придатна для сходжень будь-якої пори року. Зауважте тільки, що підйом на зимовий Петрос — завдання не для новачків: такому походу надана категорія складності 2-А (далеко не найскладніший маршрут, проте без відповідного спорядження, досвіду та кваліфікованого інструктора сюди краще не потикатись).</p>
       <p> Дізнайся більше цікавої інформації про <a href="https://guide.karpaty.ua/uk/places/petros" target="_bank"> Петрос</a> </p>
@@ -24,7 +25,27 @@
         <li>Мармароси</li>
         <li>Карпати румунські</li> 
       </ul>
-      <form action="https://forms.gle/vLxasW6xSQzJ2jpA6"> Поділися своїм досвідом 
+      </div> 
+      <form action="https://forms.gle/vLxasW6xSQzJ2jpA6"> Поділися своїм досвідом: 
+
+      <label> Ви бували в горах? 
+          <input id="yes" value="yes" type="radio" name="yes-no"> Так
+        </label>
+      <label>
+          <input id="no" value="no" type="radio" name="yes-no"> Ні 
+        </label>
+      <label> Коли ви полюбляэте ходити в гори?
+          <input id="spring" type="checkbox" name="season"> Весна
+        </label>
+      <label> 
+          <input id="summer" type="checkbox" name="season"> Літо
+        </label>
+      <label>
+          <input id="autumn" type="checkbox" name="season"> Осінь
+        </label>
+      <label>
+          <input id="winter" type="checkbox" name="season"> Зима 
+        </label>
       <input type="text" placeholder="Які гори ти знаєш?" required> 
       <button type="submit">Надіслати
       </button>
