--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
       </div> 
       <form action="https://forms.gle/vLxasW6xSQzJ2jpA6"> Поділися своїм досвідом: 
 
-      <label> Ви бували в горах? 
-          <input id="yes" value="yes" type="radio" name="yes-no"> Так
+      <br><label> Ви бували в горах? 
+          <br><input id="yes" value="yes" type="radio" name="yes-no"> Так
         </label>
-      <label>
+      <br><label>
           <input id="no" value="no" type="radio" name="yes-no"> Ні 
         </label>
-      <label> Коли ви полюбляэте ходити в гори?
-          <input id="spring" type="checkbox" name="season"> Весна
+      <br><label> Коли ви полюбляэте ходити в гори?
+         <br> <input id="spring" type="checkbox" name="season"> Весна
         </label>
-      <label> 
+      <br><label> 
           <input id="summer" type="checkbox" name="season"> Літо
         </label>
-      <label>
+      <br><label>
           <input id="autumn" type="checkbox" name="season"> Осінь
         </label>
-      <label>
+      <br><label>
           <input id="winter" type="checkbox" name="season"> Зима 
         </label>
-      <input type="text" placeholder="Які гори ти знаєш?" required> 
+      <br><input type="text" placeholder="Які гори ти знаєш?" required> 
       <button type="submit">Надіслати
       </button>
       </form>
